# Pillow

./: .gitignore  CMakeLists.txt  conanfile.py  project.conf
depends/: download-and-extract.sh
depends/freetype/: CMakeLists.txt
depends/freetype/builds/windows/vc2010/: freetype.user.props  freetype.vcxproj
depends/freetype/src/autofit/: afshaper.c
depends/fribidi/: CMakeLists.txt
depends/fribidi/lib/: arabic-shaping.tab.i  bidi-type.tab.i  brackets-type.tab.i  brackets.tab.i  fribidi-config.h  joining-type.tab.i  mirroring.tab.i
depends/lcms2/: CMakeLists.txt
depends/lcms2/Projects/VC2017/lcms2_static/: lcms2_static.vcxproj
depends/libimagequant/: CMakeLists.txt
depends/libraqm/: CMakeLists.txt
depends/libraqm/src/: raqm-version.h
depends/libraqm/tests/: cursor_position_GB3.test
scripts/: build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat
src/: _webp.c
src/libImaging/: Convert.c
